--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,15 @@
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>4.3.13.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
